tests/invalid/invalid_continue.c
// FAIL
int main() {
    continue;
    return 0;
}
